--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -21,7 +21,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.79 2004/01/08 08:41:44 jaco Exp $
+# $Id: hwdetect.in,v 1.80 2004/01/08 11:39:58 jaco Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
@@ -1110,6 +1110,42 @@ sub hwdetect_getdisks {
 			}
 		}
 	}
+	
+	### do the lvm disks
+	foreach my $vol (@{$all_hdds->{lvms}}) {
+		my $name = $vol->{VG_name};
+		foreach my $disk ($vol->{primary}->{normal}) {
+			foreach my $lvm (@{$disk}) {
+				my $type = defined($fstypes{$lvm->{type}}) ? $fstypes{$lvm->{type}}[1] : "ext2";
+				my @opts = @{$fsopts{$type}};
+				if ($lvm->{device} && @opts) {
+					my $dev = $lvm->{device};
+					$all_devs{$dev}->{info}    = "/dev/" . $lvm->{device} . ", size=" . $lvm->{size} . ", type=" . $lvm->{type} . ": " . $type . " (lvm, $name)";
+					$all_devs{$dev}->{dev}     = "/dev/" . $lvm->{device};
+					$all_devs{$dev}->{devfs}   = "/dev/" . $lvm->{device};
+					$all_devs{$dev}->{size}    = $lvm->{size};
+					$all_devs{$dev}->{media}   = "lvm";
+					if ($lvm->{type} =~ /^130/) {
+						$haveswap = 1;
+						$all_devs{$dev}->{mount} = "swap";
+					}
+					else {
+						$all_devs{$dev}->{mount} = "/mnt/".$lvm->{device};
+						if (defined($opts[2])) {
+							$all_devs{$dev}->{opt} = ($cmdline{'fstab'} =~ /noauto/) ? $fsopt_fullro.",".$fsopt_noauto : $fsopt_fullro.",".$fsopt_auto;
+						}
+						else {
+							$all_devs{$dev}->{opt} = $fsopt_set;
+						}
+					}
+					$all_devs{$dev}->{type}    = $type;
+					$all_devs{$dev}->{extopt}  = $opts[1];
+					$all_devs{$dev}->{persist} = $opts[0];
+				}
+			}
+		}
+	}
+	
 	$num = 0;
 	$num++ foreach (keys %all_devs);
 	print "$num found";
