--- a/mklivecd/src/mklivecd.in
+++ b/mklivecd/src/mklivecd.in
@@ -20,7 +20,7 @@
 #
 # Adapted from the MiniCD (http://www.linuxminicd.org) and mkinitrd build scripts
 #
-# $Id: mklivecd.in,v 1.93 2004/01/09 08:22:05 jaco Exp $
+# $Id: mklivecd.in,v 1.94 2004/01/09 10:20:02 jaco Exp $
 #
 
 use strict;
@@ -158,7 +158,7 @@ Boot options:
                                    background display image.
    --mdkboot                       Use the Mandrake boot image extension to 
                                    display the boot message.
-   --timeout                       Specify the default ISO Linux prompt timeout
+   --timeout <sec>                 Specify the default ISO Linux prompt timeout
                                    in seconds. 
                                    (default: $o_timeout)
    --keyboard <mapping>            Specify a different keyboard layout as 
@@ -384,6 +384,7 @@ sub parse_options {
 		'bootkey=s%',
 		'bootimg=s',
 		'mdkboot',
+		'timeout=i',
 		'keyboard=s',
 		'resolution=s',
 		'splash=s',
