--- a/mklivecd/src/linuxrc.in
+++ b/mklivecd/src/linuxrc.in
@@ -22,7 +22,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) linuxrc script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: linuxrc.in,v 1.61 2004/01/10 08:33:08 jaco Exp $
+# $Id: linuxrc.in,v 1.62 2004/01/10 09:12:39 jaco Exp $
 #
 
 ### global variables
@@ -163,7 +163,7 @@ loadmod() {
 		echo -n "$MODULE "
 		insmod $MODULE $2 && return 0 || return 1
 	else
-		insmod $MODULE $2 2>&1 >/dev/null && return 0 || return 1
+		(insmod $MODULE $2 2>&1)>/dev/null && return 0 || return 1
 	fi
 }
 
