Update for latest drakxtools

--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -21,7 +21,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.83 2004/01/10 18:23:39 jaco Exp $
+# $Id: hwdetect.in,v 1.84 2004/01/11 13:23:51 jaco Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
@@ -729,7 +729,8 @@ sub hwdetect_writeconf {
 		print "Writing modules configuration: ";
 		system(":> $prefix/etc/modules.conf"); # clear first
 		system(":> $prefix/etc/modprobe.conf"); # clear first
-		modules::write_conf($prefix);
+		$modules::prefix = $prefix;
+		modules::write_conf();
 		print_success();
 	}
 	set_progress();
