--- a/mklivecd/src/linuxrc.in
+++ b/mklivecd/src/linuxrc.in
@@ -22,7 +22,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) linuxrc script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: linuxrc.in,v 1.63 2004/01/11 13:24:53 jaco Exp $
+# $Id: linuxrc.in,v 1.64 2004/01/11 18:07:56 jaco Exp $
 #
 
 ### global variables
@@ -160,8 +160,11 @@ loadmod() {
 	[ ! -f $MODULE ] && MODULE="/initrd$MODULE"
 	[ ! -f $MODULE ] && return 1
 	if [ -n "$DEBUG" ]; then
+		RET=0
 		echo -n "$MODULE: "
-		insmod $MODULE $2 && return 0 || return 1
+		insmod $MODULE $2 && RET=0 || RET=1
+		echo "($RET)"
+		return $RET
 	else
 		(insmod $MODULE $2 2>&1)>/dev/null && return 0 || return 1
 	fi
@@ -295,18 +298,6 @@ findcloop() {
 	[ -n "$ALL_LOADED" ] && printloaded || printfail
 	set_progress
 
-	# probe the SCSI devices
-	doscsi=`grep -iq noscsi /proc/cmdline || echo 1`
-	if [ -n "$doscsi" ]; then
-		echo -n "Probing SCSI devices: "
-		SCSI_FOUND=
-		for i in $SCSI_MODULES; do
-			loadmod $i && SCSI_FOUND=1
-		done
-		[ -n "$SCSI_FOUND" ] && printloaded || printok
-	fi
-	set_progress
-
 	# probe the USB devices
 	dousb=`grep -iq nousb /proc/cmdline || echo 1`
 	if [ -n "$dousb" ]; then
@@ -319,6 +310,18 @@ findcloop() {
 			loadmod $i
 		done
 		[ -n "$USB_FOUND" ] && printloaded || printok
+	fi
+	set_progress
+	
+	# probe the SCSI devices
+	doscsi=`grep -iq noscsi /proc/cmdline || echo 1`
+	if [ -n "$doscsi" ]; then
+		echo -n "Probing SCSI devices: "
+		SCSI_FOUND=
+		for i in $SCSI_MODULES; do
+			loadmod $i && SCSI_FOUND=1
+		done
+		[ -n "$SCSI_FOUND" ] && printloaded || printok
 	fi
 	set_progress
 
