--- a/mklivecd/mklivecd.spec.in
+++ b/mklivecd/mklivecd.spec.in
@@ -1,4 +1,4 @@
-# $Id: mklivecd.spec.in,v 1.27 2003/12/30 20:19:51 jaco Exp $
+# $Id: mklivecd.spec.in,v 1.28 2004/01/12 06:06:43 jaco Exp $
 
 %define name	mklivecd
 %define version	@MKLIVECDVER@
@@ -14,7 +14,7 @@ License:	GPL
 Group:		System/Configuration/Boot and Init
 URL:		http://livecd.berlios.de/
 Source0:	%{name}-@ARCHIVEVER@.tar.bz2
-Requires:	busybox >= 1:1.00-0.pre4.2mdk, cloop-utils >= 1.02-4mdk, mkisofs, squashfs-tools
+Requires:	busybox >= 1:1.00-0.pre4.2mdk, cloop-utils >= 1.02-4mdk, mkisofs, squashfs-tools >= 1.3r2-2mdk
 BuildRoot:	%{_tmppath}/%{name}-root
 Buildarch:	noarch
 
