--- a/mklivecd/src/mklivecd.in
+++ b/mklivecd/src/mklivecd.in
@@ -20,7 +20,7 @@
 #
 # Adapted from the MiniCD (http://www.linuxminicd.org) and mkinitrd build scripts
 #
-# $Id: mklivecd.in,v 1.97 2004/01/11 18:09:20 jaco Exp $
+# $Id: mklivecd.in,v 1.98 2004/01/12 06:06:43 jaco Exp $
 #
 
 use strict;
@@ -728,12 +728,7 @@ sub create_compressed {
 			my @files = qx(find $o_root -type f 2>/dev/null);
 			my $total = scalar(@files);
 			start_progress("Creating compressed image", $total+2);
-			my $ex = "";
-			foreach (cat_("$workdir/excludes.list")) {
-				chomp;
-				$ex .= " $_";
-			}
-			my $iso = "$loopcmp $o_root $workdir/livecd/livecd.$o_looptype -info -e $ex 2>&1";
+			my $iso = "$loopcmp $o_root $workdir/livecd/livecd.$o_looptype -info -ef $workdir/excludes.list 2>&1";
 			open CMP, "$iso |";
 			my $line;
 			my $linep = "";
