--- a/mklivecd/src/mklivecd.in
+++ b/mklivecd/src/mklivecd.in
@@ -20,7 +20,7 @@
 #
 # Adapted from the MiniCD (http://www.linuxminicd.org) and mkinitrd build scripts
 #
-# $Id: mklivecd.in,v 1.98 2004/01/12 06:06:43 jaco Exp $
+# $Id: mklivecd.in,v 1.99 2004/01/12 18:02:37 jaco Exp $
 #
 
 use strict;
@@ -729,7 +729,7 @@ sub create_compressed {
 			my $total = scalar(@files);
 			start_progress("Creating compressed image", $total+2);
 			my $iso = "$loopcmp $o_root $workdir/livecd/livecd.$o_looptype -info -ef $workdir/excludes.list 2>&1";
-			open CMP, "$iso |";
+			open CMP, "$iso |" or die_("\nFATAL: Unable to execute '$iso'\n");
 			my $line;
 			my $linep = "";
 			while ($line = <CMP>) {
@@ -749,7 +749,7 @@ sub create_compressed {
 			my $iso = "mkisofs -R -exclude-list $workdir/excludes.list -sort $workdir/sort.list -hide-rr-moved -cache-inodes -no-bak -pad -v -v";
 			$iso = defined($loopcmp) ? "$iso $o_root | $loopcmp - $size >$workdir/livecd/livecd.$o_looptype" : "$iso -o $workdir/livecd/livecd.$o_looptype $o_root";
 			$iso = "($iso) 2>&1";
-			open CMP, "$iso |";
+			open CMP, "$iso |" or die_("\nFATAL: Unable to execute '$iso'\n");
 			my $line;
 			while ($line = <CMP>) {
 				if ($line =~ m/done, estimate/) {
@@ -858,7 +858,7 @@ sub create_finaliso {
 		-p '".$opts{preparer}."' \\\
 		-P '".$opts{publisher}."' \\\
 		-b isolinux/isolinux.bin -c isolinux/boot.cat -hide-rr-moved -no-emul-boot -boot-load-size 4 -boot-info-table -sort $workdir/sort_iso.list -o $finaliso $workdir/livecd/ ".$opts{isoextrafiles}." 2>&1";
-	open ISO, "$cmd |";
+	open ISO, "$cmd |" or die_("\nFATAL: Unable to execute '$cmd'\n");
 	my $line;
 	while ($line = <ISO>) {
 		if ($line =~ m/done, estimate/) {
