--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -21,7 +21,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.84 2004/01/11 13:23:51 jaco Exp $
+# $Id: hwdetect.in,v 1.85 2004/01/12 18:35:41 jaco Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
@@ -496,8 +496,10 @@ sub hwdetect_getmouse {
 	}
 	elsif ($probed_mouse->{device} =~ /psaux/) {
 		# http://lists.berlios.de/pipermail/minicd-scripts/2003-October/000229.html
-		$probed_mouse->{XMOUSETYPE} = 'auto'; # X will auto-detect the protocol
-		$probed_mouse->{nbuttons} = 4;        # get the ZAxisMapping right (needed for wheel)
+		unless ($probed_mouse->{XMOUSETYPE} =~ /GlidePoint/) {
+			$probed_mouse->{XMOUSETYPE} = 'auto'; # X will auto-detect the protocol
+			$probed_mouse->{nbuttons} = 4;        # get the ZAxisMapping right (needed for wheel)
+		}
 	}
 	hwdetect_loadmod('unknown', $probed_vendor, $probed_mouse->{type}." ".$probed_mouse->{name}." ".$probed_desc);
 	print_hash($probed_mouse) if ($debug);
