--- a/mklivecd/src/linuxrc.in
+++ b/mklivecd/src/linuxrc.in
@@ -22,7 +22,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) linuxrc script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: linuxrc.in,v 1.64 2004/01/11 18:07:56 jaco Exp $
+# $Id: linuxrc.in,v 1.65 2004/01/13 11:43:08 jaco Exp $
 #
 
 ### global variables
@@ -433,6 +433,7 @@ createramdisk() {
 			"pivot_root $MNTRAMDISK $MNTRAMDISK/initrd" \
 			"mkdir -p /proc && mount -n -t proc none /proc" \
 			"mkdir -p /dev && mount -n -t devfs none /dev" \
+			"mkdir -p /sys /udev" \
 			"cd /" \
 			"ln -s /initrd/bin" \
 			"ln -s /initrd/etc" \
