--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -21,7 +21,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.86 2004/01/13 07:08:10 jaco Exp $
+# $Id: hwdetect.in,v 1.87 2004/01/13 18:13:54 jaco Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
@@ -924,11 +924,11 @@ sub hwdetect_getpersistent {
 					chomp($totsize);
 					my $size = int($totsize/2); # 50% of available size
 					$size = 32 if (($size < 32) && ($totsize > 32)); # try to get 32MB
-					system("(dd if=/dev/zero of=$loopimg bs=1M count=$size) 2>/dev/null");
-					system("(mke2fs -F -m0 $loopimg) 2>/dev/null");
-					system("(mount -o loop -t ext2 $loopimg $loopmnt) 2>/dev/null");
-					system("(cp -au /home/* $loopmnt) 2>/dev/null");
-					system("(cd $loopmnt ; ln -sf ".$devs{$dev}->{mount}." USB) 2>/dev/null");
+					system("(dd if=/dev/zero of=$loopimg bs=1M count=$size) 2>&1 >/dev/null");
+					system("(mke2fs -F -m0 $loopimg) 2>&1 >/dev/null");
+					system("(mount -o loop -t ext2 $loopimg $loopmnt) 2>&1 >/dev/null");
+					system("(cp -au /home/* $loopmnt) 2>&1 >/dev/null");
+					system("(cd $loopmnt ; ln -sf ".$devs{$dev}->{mount}." USB) 2>&1 >/dev/null");
 					umount(undef, $loopmnt);
 
 					system("echo 'loop=/home' >$persist");
@@ -1045,7 +1045,7 @@ sub hwdetect_getdisks {
 					}
 					else {
 						$all_devs{$dev}->{mount} = "/mnt/".$raw->{device};
-						if ($disk->{usb_media_type} =~ /^Mass Storage/) {
+						if (($disk->{usb_media_type} =~ /^Mass Storage/) || ($disk->{info} =~ /Flash/)) {
 							$all_devs{$dev}->{opt} = $fsopt_auto.",".$fsopt_fullrw;
 							$all_devs{$dev}->{usb} = 1;
 							$all_devs{$dev}->{mount} = "/mnt/usb".$numusb;
