--- a/livecdfs/Makefile
+++ b/livecdfs/Makefile
@@ -1,15 +1,21 @@
-# $Id: Makefile,v 1.1 2004/01/18 15:47:52 jaco Exp $
+# $Id: Makefile,v 1.2 2004/01/18 16:51:02 jaco Exp $
 
 include Rules.mk
 
 all: $(LIBRARY) test
 
 $(LIBRARY): $(OBJECTS)
-	$(CC) -shared -Wl,-soname -Wl,$(LIBRARY).0.0 -o $(LIBRARY) $(OBJECTS)
+	$(CC) -shared -Wl,-soname -Wl,$(LIBRARY).0.0 -o $(LIBRARY).0.0.0 $(OBJECTS)
+	$(LN) -s $(LIBRARY).0.0.0 $(LIBRARY).0.0
+	$(LN) -s $(LIBRARY).0.0.0 $(LIBRARY)
 
 test: $(SRCDIR)/test.o $(OBJECTS) $(LUFSOBJS)  
 	$(CXX) -o $@ $< $(OBJECTS) $(LUFSOBJS) 
 
+install:
+	$(MKDIR) -p $(DESTDIR)/$(LIBDIR)
+	$(CP) -a $(LIBRARY)* $(DESTDIR)/$(LIBDIR)
+	
 .cpp.o:
 	$(CXX) $(CXXFLAGS) -c -o $@ $<
 
