--- a/mklivecd/src/mklivecd.in
+++ b/mklivecd/src/mklivecd.in
@@ -20,7 +20,7 @@
 #
 # Adapted from the MiniCD (http://www.linuxminicd.org) and mkinitrd build scripts
 #
-# $Id: mklivecd.in,v 1.101 2004/01/14 20:35:18 jaco Exp $
+# $Id: mklivecd.in,v 1.102 2004/01/20 13:36:24 jaco Exp $
 #
 
 use strict;
@@ -653,9 +653,9 @@ sub create_initrd {
 	# generate modules file
 	do_cmd(":>$dir$modfile", ++$pos);
 	my $cfg = defined($kernel26) ? "" : "--config $dir$modfile";
-	do_cmd("depmod -a --basedir $dir ".$cfg." $o_kernel 2>/dev/null", ++$pos);
+	do_cmd("(depmod -a --basedir $dir ".$cfg." $o_kernel || cp -f $o_root/lib/modules/$o_kernel/modules.dep $dir/lib/modules/$o_kernel) 2>/dev/null", ++$pos);
 
-	# get sizes
+	# get sizes$o_kernel
 	my $size = get_exec("du -ks $dir | awk '{print \$1}'");
 	$size = $size + 250;
 	set_progress(++$pos, "du -ks $dir");
