--- a/mklivecd/src/halt.local.in
+++ b/mklivecd/src/halt.local.in
@@ -11,7 +11,7 @@
 #      either need to have our own halt or pivot_root
 #
 # Copyright (C) 2003, Buchan Milne <bgmilne@cae.co.za>
-# Copyright (C) 2003, Jaco Greeff <jaco@linuxminicd.org>
+# Copyright (C) 2003-2004, Jaco Greeff <jaco@linuxminicd.org>
 #
 #    This program is free software; you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
@@ -29,7 +29,7 @@
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: halt.local.in,v 1.12 2003/12/19 12:53:30 jaco Exp $
+# $Id: halt.local.in,v 1.13 2004/01/20 17:41:00 jaco Exp $
 #
 
 export PATH=/initrd/bin:/initrd/usr/bin:/initrd/sbin:/initrd/usr/sbin:/bin:/usr/bin:/sbin:/usr/sbin
@@ -43,8 +43,9 @@ HALTCMD="$1"
 EJECT=1
 grep -q noeject /proc/cmdline && EJECT=
 
-# do we have a cloop module?
-CLOOP=`lsmod | grep -iq cloop && echo 1`
+# find our loop device and module
+DEVLOOP=`grep /initrd/loopfs /proc/mounts | awk '{ print $1 }'`
+LOOPMOD=`echo $DEVLOOP | awk -F / '{ print $3 }'`
 
 # We probably want to be able to localise this:
 MSG="Remove the CD, and press [Enter] to power the computer off"
@@ -108,13 +109,13 @@ docmd   "Performing initrd pivot" \
 docmd   "Unmounting $MNTLIVECD" \
 	"umount $MNTLIVECD 2>/dev/null"
 
-# Unload the cloop module before trying to umount/eject CD
-if [ -n "$CLOOP" ]; then
-	docmd   "Removing cloop module" \
-		"losetup -d /dev/cloop/0" \
-		"rmmod cloop >/dev/null 2>/dev/null"
+# Unload the loop module before trying to umount/eject CD
+if [ -n "$DEVLOOP" ]; then
+	docmd   "Removing loop module" \
+		"losetup -d $DEVLOOP" \
+		"rmmod $LOOPMOD >/dev/null 2>/dev/null"
 fi
-
+	
 # Turn on autoeject of CD-Rom
 # (Stolen from the knoppix-reboot script)
 for dev in /proc/sys/dev/cdrom*/lock; do
