--- a/mklivecd/src/linuxrc.in
+++ b/mklivecd/src/linuxrc.in
@@ -22,14 +22,14 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) linuxrc script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: linuxrc.in,v 1.66 2004/01/14 20:35:18 jaco Exp $
+# $Id: linuxrc.in,v 1.67 2004/01/20 17:41:00 jaco Exp $
 #
 
 ### global variables
 export PATH=/bin:/sbin:/usr/bin:/usr/sbin:/initrd/bin:/initrd/sbin:/initrd/usr/bin:/initrd/usr/sbin
 umask 022
 DEBUG=
-FOUND_MDKISO=""
+FOUND_ISO=""
 OPT_MODULES_24="@DEF_MODULES_OPT_24@"
 DEP_MODULES_24="@DEF_MODULES_DEP_24@ @DEF_SCSI_MODULES_DEP_24@"
 SCSI_MODULES_24="@DEF_SCSI_MODULES_24@ @DEF_SCSI_MODULES_OPT_24@" # these are for the SCSI drivers
@@ -53,8 +53,6 @@ LOOPBEXT=".bzlp"          # extension for the above
 LOOPCEXT=".clp"           # extension for the above
 LOOPSEXT=".sqfs"
 LOOPIEXT=".iso"
-SQUASHFS=
-LOOPTYPE="$LOOPCEXT"
 ISOTYPE="iso9660"
 MD5FILE="livecd.md5"
 DEVICES=""                # list of all ide/scsi cd-type devices
@@ -69,6 +67,7 @@ KERNELVER="@KERNELVER@"   # this is setup via uname -r in the initialise section
 MKLIVECDVER="@MKLIVECDVER@"
 NAME_VERSION_STR="@NAME_VERSION_STR@"
 CLOOPVER="@CLOOPVER@"
+
 MNTCDROM=/cdrom
 MNTLIVECD=/loopfs
 MNTRAMDISK=/ramfs
@@ -327,61 +326,56 @@ findcloop() {
 	set_progress
 
 	# do the loop
-	echo -n "Finding compressed loop image: "
+	echo -n "Finding loop image: "
 	for i in $DEVICES; do
 		CDDEV="$i"
 		$MOVE_TO_COL
 		$SETCOLOR_WARN
 		echo -n "$i"
 		$SETCOLOR_NORMAL
-		if `mount -r -t iso9660 $CDDEV $MNTCDROM 2>&1 >/dev/null`; then
-			# try to find either the .clp, .bzlp or .sqfs compressed image
+		ISOTYPE="iso9660"
+		if `mount -r -t $ISOTYPE $CDDEV $MNTCDROM 2>&1 >/dev/null`; then
+			# try to find either the .iso, .clp, .bzlp or .sqfs loop image
 			LOOPTYPE=""
 			if [ -f $MNTCDROM/$BASEIMG$LOOPBEXT ]; then
 				LOOPTYPE="$LOOPBEXT"
+				DEVLOOP="/dev/bzloop/0"
 				LOOPMOD="bzloop"
-				SQUASHFS=1
 			elif [ -f $MNTCDROM/$BASEIMG$LOOPCEXT ]; then
 				LOOPTYPE="$LOOPCEXT"
+				DEVLOOP="/dev/cloop/0"
 				LOOPMOD="cloop"
-				SQUASHFS=
 			elif [ -f $MNTCDROM/$BASEIMG$LOOPSEXT ]; then
 				LOOPTYPE="$LOOPSEXT"
+				DEVLOOP="/dev/loop/0"
 				LOOPMOD="squashfs"
-				SQUASHFS=1
+				ISOTYPE="squashfs"
 			elif [ -f $MNTCDROM/$BASEIMG$LOOPIEXT ]; then
 				LOOPTYPE="$LOOPIEXT"
+				DEVLOOP="/dev/loop/0"
 				LOOPMOD=
-				SQUASHFS=
 			fi
 
 			# if it exists, load the correct module and mount
-			if [ -n "$LOOPTYPE" ] && [ -f $MNTCDROM/$BASEIMG$LOOPTYPE ]; then
-				FOUND_MDKISO="$i"
+			if [ -n "$LOOPTYPE" ]; then
+				FOUND_ISO="$i"
 				printok
 
 				checkmd5 ""
 
 				if [ -n "$LOOPMOD" ]; then
-					echo -n "Loading compressed loop kernel module: "
+					echo -n "Loading compressed loop module: "
 					loadmod $LOOPMOD && printloaded || printfail
-					#loadmod $LOOPMOD file=$MNTCDROM/$BASEIMG$LOOPTYPE && printloaded || printfail
 				fi
 
 				echo -n "Mounting loop image on $MNTLIVECD: "
-				if [ -z "$SQUASHFS" ]; then
-					CLOOPDEV="/dev/$LOOPMOD/0"
-					if [ -e "$CLOOPDEV" ]; then
-						losetup $CLOOPDEV $MNTCDROM/$BASEIMG$LOOPTYPE && \
-						mount -r -t $ISOTYPE $CLOOPDEV $MNTLIVECD && CLOOPMNT=1
-					fi
-				else
-					[ -n "$SQUASHFS" ] && ISOTYPE="squashfs"
-					mount -o loop -r -t $ISOTYPE $MNTCDROM/$BASEIMG$LOOPTYPE $MNTLIVECD && CLOOPMNT=1
+				if [ -e "$DEVLOOP" ]; then
+					losetup $DEVLOOP $MNTCDROM/$BASEIMG$LOOPTYPE && \
+					mount -r -t $ISOTYPE $DEVLOOP $MNTLIVECD && LOOPMNT=1
 				fi
 
 				# did we get it?
-				if [ -z "$CLOOPMNT" ]; then
+				if [ -z "$LOOPMNT" ]; then
 					printfail
 					$SETCOLOR_FAIL
 					echo ""
@@ -397,7 +391,7 @@ findcloop() {
 			`umount $MNTCDROM 2>&1 >/dev/null`
 		fi
 	done
-	if [ -z "$FOUND_MDKISO" ]; then
+	if [ -z "$FOUND_ISO" ]; then
 		printfail
 		$SETCOLOR_FAIL
 		echo ""
